syntax = "proto3";

package user; // Use the same package name everywhere

service UserService {
  rpc CreateProfile (CreateProfileRequest) returns (CreateProfileResponse);
  rpc GetUserProfile (UserProfileRequest) returns (UserProfileResponse);
}

message CreateProfileRequest {
  string email = 1;
  string type = 2;
  string fullName = 3;
  string name = 4;
  string companyName = 5;
  string country = 6;
  string role = 7;
}

message CreateProfileResponse {
  string userId = 1;
  string message = 2;
  bool success = 3;
}

message UserProfileRequest {
  string email = 1;
}

message UserProfileResponse {
  string email = 1;
  string name = 2;
  string type = 3;
  string role = 4;
  Address address = 5;
  string phone = 6;
  CommonError error = 7;
}

message Address {
  string street = 1;
  string city = 2;
  string country = 3;
}

message CommonError {
  string code = 1;
  string message = 2;
}